--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/passion?useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = walking1
+spring.datasource.password = password
 
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
