--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # The update value creates the database and updates the schema if it has changed:
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+uB196tY4UZrLoHfamvcC3M5OMtidfhYO
