--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/passion?useSSL=false&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = password
-
-# hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-# The create value only creates the database when the application is started.
-# The update value creates the database and updates the schema if it has changed:
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url = jdbc:mysql://passion.ckujkuf1ovjz.us-east-1.rds.amazonaws.com:3306/userDB?useSSL=false&serverTimezone=UTC
+#spring.datasource.username = root
+#spring.datasource.password = password
+#
+## hibernate properties
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#
+## Hibernate ddl auto (create, create-drop, validate, update)
+## The create value only creates the database when the application is started.
+## The update value creates the database and updates the schema if it has changed:
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+#sever.port=5000
 
 
 
